Totals column: prevent text overflow for laaaarge numbers.

--- a/src/components/Invoices/invoice.module.scss
+++ b/src/components/Invoices/invoice.module.scss
@@ -76,10 +76,13 @@ label.descriptionRowLabel {
 
 	& span.total {
 		background-color: #48474b;
-		margin-left: 1rem;
-		padding-right: 0.3rem;
 		font-weight: bold;
+		margin-left: 1rem;
+		max-width: 10%;
+		overflow: hidden;
+		padding-right: 0.3rem;
 		text-align: right;
+		text-overflow: ellipsis;
 		width: 10%;
 	}
 }
@@ -88,8 +91,8 @@ label.descriptionRowLabel {
 .totals {
 	display: flex;
 	flex-direction: row;
-	justify-content: space-between;
 	font-weight: bold;
+	justify-content: space-between;
 	text-align: center;
 	& span {
 		padding-right: 0.3rem;
